caddy.yml
apiVersion: v1
kind: Pod
metadata:
  name: caddy
spec:
  containers:
  - name: caddy
    image: caddy:2.10-alpine
    ports:
    - containerPort: 8080
