cm-pod-2.yml
apiVersion: v1
kind: Pod
metadata:
  name: env-configmap-2
spec:
  containers:
  - name: envars-test-container
    image: nginx
