httpd_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
spec:
  containers:
  - name: httpd
    image: httpd:2.4-alpine
    ports:
    - containerPort: 80
