pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
spec:
  containers:
  - name: nginx1
    image: nginx:latest
    ports:
    - containerPort: 8081
