httpd_service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  type: NodePort
  selector:
    app: httpd.service
  ports:
    - port: 80
      targetPort: 80
      # Optional field
      nodePort: 30017
