nginx-cluster-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-cluster-ip-svc
spec:
  selector:
    app: nginx-lbl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
