nginx_service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx-lbl
  ports:
    - port: 80
      targetPort: 80
      # Optional field
      nodePort: 30005
